Implemented book creation with chapters and pages

--- a/backend/CoreService/src/main/resources/application.yml
+++ b/backend/CoreService/src/main/resources/application.yml
@@ -31,3 +31,8 @@ app:
   jwt:
     secret: your-256-bit-secret-key-here-make-it-long-and-secure
     expiration: 86400000 # 24 hours in milliseconds
+
+logging:
+  level:
+    com.mharfe.coreService.security: DEBUG
+    org.springframework.security: DEBUG
